# callcut

./: README.md  index.html  pyproject.toml
.github/workflows/: bot.yaml  doc.yaml  pytest.yaml
dev/: genindex.html  index.html  objects.inv  search.html  searchindex.js  usage.html
dev/_sources/: index.rst.txt
dev/_sources/api/: evaluation.rst.txt  io.rst.txt  training.rst.txt
dev/_static/: documentation_options.js
dev/api/: evaluation.html  extractors.html  index.html  io.html  logging.html  nn.html  pipeline.html  training.html
dev/changes/: index.html  latest.html
doc/: conf.py  index.rst  links.inc  usage.rst
doc/_sphinxext/: sphinx_remove_toctrees.py
doc/_templates/autosummary/: class_no_inherited_members.rst  model.rst
doc/api/: extractors.rst  features.rst  index.rst  inference.rst  io.rst  logging.rst  metrics.rst  nn.rst  pipeline.rst
doc/changes/: authors.inc  latest.rst
src/callcut/: __init__.py  io.py  nn.py
src/callcut/_commands/: main.py  sys_info.py
src/callcut/data/: __init__.py  _dataset.py
src/callcut/evaluation/: __init__.py  _boundary.py  _decoding.py  _event.py  _frame.py  _matching.py  _types.py  _utils.py
src/callcut/extractors/: __init__.py  _base.py  _snr.py
src/callcut/features/: __init__.py  _bands.py  _base.py  _normalize.py  _snr.py  _utils.py
src/callcut/inference/: __init__.py  _decode.py  _predict.py
src/callcut/io/: __init__.py  _dataset.py  _labels.py  _loader.py  _recording.py
src/callcut/metrics/: __init__.py  _boundary.py  _event.py  _frame.py  _matching.py  _types.py
src/callcut/nn/: __init__.py  _base.py  _models.py  _registry.py
src/callcut/pipeline/: __init__.py  _evaluate.py  _inference.py  _predict.py  _save_load.py  _types.py
src/callcut/training/: __init__.py  _callbacks.py  _datamodule.py  _losses.py  _module.py
src/callcut/utils/: __init__.py  _checks.py  _fixes.py  config.py  logs.py
tests/: conftest.py  test_io.py  test_nn.py
tests/_commands/: test_main.py  test_sys_info.py
tests/assets/: gy6or6_baseline_250312_0823.5883_annotations.csv  gy6or6_baseline_250312_1118.6_annotations.csv  gy6or6_baseline_250312_1456.1276_annotations.csv  or60yw70_280912_1616.1941_annotations.csv  or60yw70_300912_0725.437_annotations.csv
tests/evaluation/: test__utils.py
tests/io/: test__loader.py  test__recording.py
tests/nn/: test__base.py  test__models.py  test__registry.py
tests/pipeline/: conftest.py  test__evaluate.py  test__inference.py  test__predict.py  test__save_load.py  test__types.py
tests/training/: test__callbacks.py  test__datamodule.py  test__losses.py  test__module.py
tests/utils/: test_checks.py  test_config.py  test_docs.py  test_imports.py  test_logs.py
