[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0', 'setuptools_scm>=8']

[dependency-groups]
doc = [
  'furo',
  'intersphinx_registry',
  'matplotlib',
  'memory-profiler',
  'numpydoc',
  'sphinx-copybutton',
  'sphinx-design',
  'sphinx-issues',
  'sphinx>=9.0',
  'sphinxcontrib-bibtex',
  'sphinxcontrib-pydantic>=0.2.0',
]
ide = [
  'ipykernel',
  'ipympl',
  'ipython',
]
style = [
  'bibclean',
  'codespell[toml]>=2.2.4',
  'pre-commit',
  'ruff>=0.6.0',
  'toml-sort',
  'yamllint',
]
test = [
  'pytest-cov',
  'pytest-randomly',
  'pytest-timeout',
  'pytest>=8.0',
]

[project]
authors = [
  {email = 'mathieu.scheltienne@gmail.com', name = 'Mathieu Scheltienne'},
  {email = 'theophane.piette@unige.ch', name = 'Theophane Piette'},
]
classifiers = [
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
]
dependencies = [
  'click',
  'numpy>=1.23,<3',
  'packaging',
  'pandas',
  'psutil',
]
description = 'Automatic animal call detection.'
dynamic = ["version"]
keywords = [
  'animal',
  'call',
  'python',
]
license = "MIT"
license-files = ["LICENSE"]
maintainers = [
  {email = 'mathieu.scheltienne@gmail.com', name = 'Mathieu Scheltienne'},
]
name = 'callcut'
readme = 'README.md'
requires-python = '>=3.11'

[project.optional-dependencies]
cpu = [
  'lightning>=2.0',
  'torch>=2.10',
  'torchaudio>=2.10',
  'torchcodec>=0.10',
]
cu128 = [
  'lightning>=2.0',
  'torch>=2.10',
  'torchaudio>=2.10',
  'torchcodec>=0.10',
]

[project.scripts]
callcut = 'callcut._commands.main:run'

[project.urls]
source = 'https://github.com/mscheltienne/callcut'
tracker = 'https://github.com/mscheltienne/callcut/issues'

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words = '.codespellignore'
skip = 'build,.git,.mypy_cache,.pytest_cache,.venv'

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/callcut/_version.py',
  '**/callcut/utils/_fixes.py',
]

[tool.pytest.ini_options]
addopts = ['--color=yes', '--cov-report=', '--durations=20', '--junit-xml=junit-results.xml', '--strict-config', '--tb=short', '-ra', '-v']
filterwarnings = [
  'error',
]
junit_family = 'xunit2'
minversion = '8.0'

[tool.ruff]
extend-exclude = []
line-length = 88

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = []
select = ['A', 'B', 'C4', 'D', 'E', 'F', 'G', 'I', 'LOG', 'NPY', 'PERF', 'PIE', 'PT', 'T20', 'TID', 'UP', 'W']

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
forced-separate = ["tests"]

[tool.ruff.lint.per-file-ignores]
'*' = [
  'B904',  # 'Within an except clause, raise exceptions with raise ... from ...'
  'D100',  # 'Missing docstring in public module'
  'D104',  # 'Missing docstring in public package'
  'D107',  # 'Missing docstring in __init__'
]
'__init__.py' = ['F401']
'src/callcut/training/_datamodule.py' = ['NPY002']  # legacy np.random seeded by L.seed_everything
'tutorials/*' = ['D205', 'D400', 'T201']

[tool.ruff.lint.pydocstyle]
convention = 'numpy'
ignore-decorators = ["callcut.utils._docs.copy_doc"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['callcut*']
where = ['src']

[tool.setuptools_scm]
version_file = "src/callcut/_version.py"
version_scheme = "release-branch-semver"

[tool.tomlsort]
all = true
ignore_case = true
spaces_before_inline_comment = 2
trailing_comma_inline_array = true

[tool.uv]
conflicts = [[{extra = 'cpu'}, {extra = 'cu128'}]]
default-groups = "all"

[[tool.uv.index]]
explicit = true
name = 'torch-cpu'
url = 'https://download.pytorch.org/whl/cpu'

[[tool.uv.index]]
explicit = true
name = 'torch-cu128'
url = 'https://download.pytorch.org/whl/cu128'

[tool.uv.sources]
torch = [
  {extra = 'cpu', index = 'torch-cpu'},
  {extra = 'cu128', index = 'torch-cu128'},
]
torchaudio = [
  {extra = 'cpu', index = 'torch-cpu'},
  {extra = 'cu128', index = 'torch-cu128'},
]
torchcodec = [
  {extra = 'cpu', index = 'torch-cpu'},
  {extra = 'cu128', index = 'torch-cu128'},
]
